--- a/src/css/common.css
+++ b/src/css/common.css
@@ -26,18 +26,27 @@ img {
   border-radius: 4px;
   }
 
-button[data-start] {
-  padding: 5px;
+button[data-start],
+button[data-stop] {
+  padding: 6px;
   font-size: 20px;
-  background-color: #7763c5;
-  color: #fafafa;
+  border-color: #7763c5;
+  color: #000000;
   border-radius: 40%;
-  border: none;
+  box-shadow: rgba(99, 99, 182, 0.3) 0px 50px 100px -20px, rgba(0, 0, 0, 0.4) 0px 30px 60px -30px, rgba(98, 99, 202, 0.7) 0px -2px 6px 0px inset;
+  
+}
+
+button[data-stop] {
+  margin-left: 20px;
 }
 
 button[data-start]:hover,
+button[data-stop]:hover,
+button[data-start]:focus,
 button[data-start]:focus {
   scale: 1.1;
+   /* background-color: #9992b4; */
 }
 
 .timer {
