--- a/src/css/common.css
+++ b/src/css/common.css
@@ -41,12 +41,9 @@ button[data-stop] {
   margin-left: 20px;
 }
 
-button[data-start]:hover,
-button[data-stop]:hover,
 button[data-start]:focus,
-button[data-start]:focus {
+button[data-stop]:focus {
   scale: 1.1;
-   /* background-color: #9992b4; */
 }
 
 .timer {
